# forge

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml  forge.service  test.py  test.rs
docs/: architecture.md  offline-mode.md  roadmap.md  security.md
docs/superpowers/plans/: 2026-06-01-forge-features.md
src/: cleanup.rs  config.rs  diff.rs  error.rs  language.rs  main.rs  rate_limit.rs  session.rs  state.rs  status.rs  upload.rs
src/git/: mod.rs  repo_builder.rs  smart_http.rs
src/inference/: candle.rs  mod.rs
src/prompt/: mod.rs
